syntax = "proto3";

package comment;

option go_package = "shared/proto/comment;comment";

import "google/protobuf/timestamp.proto";
import "user.proto";

message Comment {
    int64 id = 1;
    user.User user = 2;
    string body = 3; // fixed field number
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message GetCommentRequest {
    int64 comment_id = 1;
}

message GetCommentResponse {
    Comment comment = 1;
}

service CommentService {
    rpc GetComment(GetCommentRequest) returns (GetCommentResponse);
}
